NIFI-13307 Replaced KeyStoreUtils with nifi-security-ssl Builders
- Removed unused test classes from nifi-web-api