@@ -14,7 +14,7 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-package org.apache.nifi.security.util.crypto;
+package org.apache.nifi.processors.standard.hash;
 
 import org.junit.jupiter.api.Test;
 
@@ -29,30 +29,24 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 
 public class HashAlgorithmTest {
     @Test
-    void testDetermineBrokenAlgorithms() throws Exception {
-        // Arrange
+    void testDetermineBrokenAlgorithms() {
         final List<HashAlgorithm> algorithms = List.of(HashAlgorithm.values());
 
-        // Act
         final List<HashAlgorithm> brokenAlgorithms = algorithms.stream()
                 .filter(algorithm -> !algorithm.isStrongAlgorithm())
                 .collect(Collectors.toList());
 
-        // Assert
         assertEquals(Arrays.asList(HashAlgorithm.MD2, HashAlgorithm.MD5, HashAlgorithm.SHA1), brokenAlgorithms);
     }
 
     @Test
     void testShouldBuildAllowableValueDescription() {
-        // Arrange
         final List<HashAlgorithm> algorithms = List.of(HashAlgorithm.values());
 
-        // Act
         final List<String> descriptions = algorithms.stream()
-                .map(algorithm -> algorithm.buildAllowableValueDescription())
-                .collect(Collectors.toList());
+                .map(HashAlgorithm::buildAllowableValueDescription)
+                .toList();
 
-        // Assert
         descriptions.forEach(description -> {
             final Pattern pattern = Pattern.compile(".* \\(\\d+ byte output\\).*");
             final Matcher matcher = pattern.matcher(description);
@@ -72,28 +66,23 @@ public class HashAlgorithmTest {
     void testDetermineBlake2Algorithms() {
         final List<HashAlgorithm> algorithms = List.of(HashAlgorithm.values());
 
-        // Act
         final List<HashAlgorithm> blake2Algorithms = algorithms.stream()
                 .filter(HashAlgorithm::isBlake2)
                 .collect(Collectors.toList());
 
-        // Assert
         assertEquals(Arrays.asList(HashAlgorithm.BLAKE2_160, HashAlgorithm.BLAKE2_256, HashAlgorithm.BLAKE2_384, HashAlgorithm.BLAKE2_512), blake2Algorithms);
     }
 
     @Test
     void testShouldMatchAlgorithmByName() {
-        // Arrange
         final List<HashAlgorithm> algorithms = List.of(HashAlgorithm.values());
 
-        // Act
         for (final HashAlgorithm algorithm : algorithms) {
             final List<String> transformedNames = Arrays.asList(algorithm.getName(), algorithm.getName().toUpperCase(), algorithm.getName().toLowerCase());
 
             for (final String name : transformedNames) {
                 HashAlgorithm found = HashAlgorithm.fromName(name);
 
-                // Assert
                 assertEquals(name.toUpperCase(), found.getName());
             }
         }
